syntax = "proto3";

package user.v1;

option go_package = "./pkg/pb";

// User service definition
service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}

// User message
message User {
  string id = 1;
  string email = 2;
  string name = 3;
  int64 created_at = 4;
  int64 updated_at = 5;
}

// Get user request
message GetUserRequest {
  string id = 1;
}

// Get user response
message GetUserResponse {
  User user = 1;
}

// Create user request
message CreateUserRequest {
  string email = 1;
  string name = 2;
}

// Create user response
message CreateUserResponse {
  User user = 1;
}

// Update user request
message UpdateUserRequest {
  string id = 1;
  string email = 2;
  string name = 3;
}

// Update user response
message UpdateUserResponse {
  User user = 1;
}

// Delete user request
message DeleteUserRequest {
  string id = 1;
}

// Delete user response
message DeleteUserResponse {
  bool success = 1;
}

// List users request
message ListUsersRequest {
  int32 page = 1;
  int32 page_size = 2;
}

// List users response
message ListUsersResponse {
  repeated User users = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}
